@@ -253,18 +253,9 @@
 
   <profiles>
     <profile>
-      <id>jdk17-ge</id>
+      <id>jdk17</id>
       <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <surefire.argline>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.time.chrono=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.lang.ref=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/javax.security.auth.x500=ALL-UNNAMED --add-opens java.base/sun.util.calendar=ALL-UNNAMED --add-opens java.desktop/java.beans=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens java.desktop/javax.swing=ALL-UNNAMED --add-opens java.desktop/javax.swing.border=ALL-UNNAMED --add-opens java.desktop/javax.swing.event=ALL-UNNAMED --add-opens java.desktop/javax.swing.table=ALL-UNNAMED --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens java.desktop/javax.swing.plaf.metal=ALL-UNNAMED --add-opens java.desktop/javax.imageio=ALL-UNNAMED --add-opens java.desktop/javax.imageio.spi=ALL-UNNAMED --add-opens java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/sun.swing.table=ALL-UNNAMED --add-opens java.xml/javax.xml.datatype=ALL-UNNAMED --add-opens java.xml/com.sun.xml.internal.stream=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED</surefire.argline>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk16</id>
-      <activation>
-        <jdk>16</jdk>
+        <jdk>17</jdk>
       </activation>
       <build>
         <plugins>
@@ -356,39 +347,9 @@
       </properties>
     </profile>
     <profile>
-      <id>jdk11-ge-jdk16</id>
+      <id>jdk11-ge-jdk14</id>
       <activation>
-        <jdk>[11,17)</jdk>
-      </activation>
-      <properties>
-        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk11-ge</id>
-      <activation>
-        <jdk>[11,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <dependencies>
-              <dependency>
-                <groupId>jakarta.xml.bind</groupId>
-                <artifactId>jakarta.xml.bind-api</artifactId>
-                <version>${version.jakarta.xml.bind.api}</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>jdk9-ge-jdk14</id>
-      <activation>
-        <jdk>[9,15)</jdk>
+        <jdk>[11,15)</jdk>
       </activation>
       <build>
         <plugins>
@@ -405,18 +366,9 @@
       </build>
     </profile>
     <profile>
-      <id>jdk9-ge-jdk10</id>
+      <id>jdk11-ge</id>
       <activation>
-        <jdk>[9,11)</jdk>
-      </activation>
-      <properties>
-        <surefire.argline>--add-modules java.activation,java.xml.bind --illegal-access=${surefire.illegal.access}</surefire.argline>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk8-ge</id>
-      <activation>
-        <jdk>[1.8,)</jdk>
+        <jdk>[11,)</jdk>
       </activation>
       <build>
         <plugins>
@@ -429,25 +381,16 @@
               </compilerArgs>
             </configuration>
           </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>jdk8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <build>
-        <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <testExcludes>
-                <exclude>**/*09Test.java</exclude>
-                <exclude>**/Record**</exclude>
-              </testExcludes>
-            </configuration>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <dependencies>
+              <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${version.jakarta.xml.bind.api}</version>
+              </dependency>
+            </dependencies>
           </plugin>
         </plugins>
       </build>
@@ -482,6 +425,7 @@
         org.xmlpull.mxp1;resolution:=optional,
         org.xmlpull.v1;resolution:=optional,
         io.github.xstream.mxparser.*;resolution:=optional,
+        com.ctc.*;resolution:=optional,
         com.ibm.*;resolution:=optional,
         com.sun.*;resolution:=optional,
         javax.*;resolution:=optional,
@@ -489,6 +433,37 @@
         sun.*;resolution:=optional,
         *
     </bundle.import.package>
+    <surefire.argline>${surefire.preview.arg}
+      --add-opens java.base/java.lang=ALL-UNNAMED
+      --add-opens java.base/java.util=ALL-UNNAMED
+      --add-opens java.base/java.io=ALL-UNNAMED
+      --add-opens java.base/java.time=ALL-UNNAMED
+      --add-opens java.base/java.time.chrono=ALL-UNNAMED
+      --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens java.base/java.lang.ref=ALL-UNNAMED
+      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens java.base/java.text=ALL-UNNAMED
+      --add-opens java.base/javax.security.auth.x500=ALL-UNNAMED
+      --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+      --add-opens java.desktop/java.beans=ALL-UNNAMED
+      --add-opens java.desktop/java.awt=ALL-UNNAMED
+      --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+      --add-opens java.desktop/javax.swing=ALL-UNNAMED
+      --add-opens java.desktop/javax.swing.border=ALL-UNNAMED
+      --add-opens java.desktop/javax.swing.event=ALL-UNNAMED
+      --add-opens java.desktop/javax.swing.table=ALL-UNNAMED
+      --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
+      --add-opens java.desktop/javax.swing.plaf.metal=ALL-UNNAMED
+      --add-opens java.desktop/javax.imageio=ALL-UNNAMED
+      --add-opens java.desktop/javax.imageio.spi=ALL-UNNAMED
+      --add-opens java.desktop/sun.swing=ALL-UNNAMED
+      --add-opens java.desktop/sun.swing.table=ALL-UNNAMED
+      --add-opens java.xml/javax.xml.datatype=ALL-UNNAMED
+      --add-opens java.xml/com.sun.xml.internal.stream=ALL-UNNAMED
+      --add-opens java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
+      --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
+    </surefire.argline>
+    <surefire.preview.arg/>
   </properties>
 
 </project>
